@@ -197,5 +197,21 @@ exports.update = function (exports, workingDirectory) {
         });
     }
 
+    exports.toObject = function () {
+        var list = exports.listTree("", function (path, stat) {
+            return stat.isFile();
+        });
+        return Q.when(list, function (list) {
+            var tree = {};
+            var done;
+            list.forEach(function (path) {
+                tree[path] = exports.read(path, "rb");
+            });
+            return Q.when(done, function () {
+                return Q.shallow(tree);
+            });
+        });
+    };
+
 }
 
