@@ -12,6 +12,7 @@ Next minor release:
    file systems into a read-only mock, and for merging
    file system layer objects into a single file system,
    like a tar copy.
+ - Added fs.toObject()
 
 0.0.16:
  - Fixed a minor bug in distinguishing directories from
